# Portfolio

./: Cargo.toml  README.md  flake.nix
src/: app.rs  header.rs  lib.rs  plantbox.rs
src/tabs/: about.rs  content.rs  mod.rs  tab.rs  tabs.rs
