[package]
name = "wyattavilladev"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-console = "0.3.0"
leptos = { version = "0.8.6", features = ["csr"] }
strum = { version = "0.27.2", features = ["derive"] }
stylers = "0.3.2"
wasm-bindgen = "0.2.100"
